[add] functional
