# src/model/other/other_find.go
@@ -10,14 +10,14 @@ import (
 // @Tags Test app stuff
 // @Accept json
 // @Produce json
-// @Param user body model.Stuff true "Stuff data"
+// @Param user body other.Other true "Stuff data"
 // @Success 200 {object} string
 // @Failure 400
 // @Failure 409
 // @Failure 422 {object} map[string]string
 // @Failure 500
-// @Router /stuff/{id} [GET]
+// @Router /other/{id} [GET]
 // @Security Bearer
-func (s Stuff) Find(ctx *gin.Context) {
+func (s Other) Find(ctx *gin.Context) {
 	s.controller.FindOne(ctx, &s)
 }
