# src/model/other/other_update.go
@@ -10,14 +10,14 @@ import (
 // @Tags Test app stuff
 // @Accept json
 // @Produce json
-// @Param user body model.Stuff true "Stuff data"
+// @Param user body other.Other true "Stuff data"
 // @Success 200 {object} string
 // @Failure 400
 // @Failure 409
 // @Failure 422 {object} map[string]string
 // @Failure 500
-// @Router /stuff/update/{id} [PATCH]
+// @Router /other/update/{id} [PATCH]
 // @Security Bearer
-func (s Stuff) Update(ctx *gin.Context) {
+func (s Other) Update(ctx *gin.Context) {
 	s.controller.UpdateCore(ctx, &s)
 }
